--- a/index.html
+++ b/index.html
@@ -70,5 +70,5 @@ Para C0GER con cualquier Jovencita, presione el boton ENTRAR Abajo, y haga su "R
 </body>
 </html>
   <div class="logo">
-<img src="https://i.imgur.com/jLe8Sek.jpg" alt="">
+<img src="https://i.imgur.com/afHdfmt.jpg" alt="">
 </div>
